<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>no.rmz</groupId>
    <artifactId>rmatch-parent</artifactId>
    <version>1.1-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Umbrella project for the regex matcher subprojects.</name>

    <description>Regular expression matcher</description>
    <organization>
        <name>Rmz</name>
        <url>https://www.rmz.no/</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>rmz</id>
            <name>Bjørn Remseth</name>
            <email>rmz@rmz.no</email>
        </developer>
    </developers>

    <properties>
        <maven.plugin.validation>DEFAULT</maven.plugin.validation>
        <java.version>17</java.version>
        <errorprone.version>2.33.0</errorprone.version>
        <findbugs.version>1.3.2</findbugs.version>
        <guava.version>33.4.8-jre</guava.version>
        <guice.version>3.0</guice.version>
        <junit-jupiter.version>5.9.3</junit-jupiter.version>
        <junit.version>4.13.2</junit.version>
        <mavenCheckstylePlugin.version>3.6.0</mavenCheckstylePlugin.version>
        <mavenCoberturaPlugin.version>2.5.1</mavenCoberturaPlugin.version>
        <mavenCompilerPlugin.version>3.14.0</mavenCompilerPlugin.version>
        <mavenCompilerPlugin.version>3.14.0</mavenCompilerPlugin.version>
        <mavenDependencyPlugin.version>3.8.1</mavenDependencyPlugin.version>

        <mavenFindbugsPlugin.version>3.0.5</mavenFindbugsPlugin.version>
        <mavenJarPlugin.version>3.4.2</mavenJarPlugin.version>
        <mavenReleasePlugin.version>3.1.1</mavenReleasePlugin.version>
        <mavenSourcePlugin.version>3.3.1</mavenSourcePlugin.version>
        <mavenSurefire.version>3.5.3</mavenSurefire.version>
        <mockitoCore.version>5.19.0</mockitoCore.version>
        <mockitoJunitJupiter.version>5.13.4</mockitoJunitJupiter.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>


    <dependencies>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockitoCore.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.19.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${mockitoJunitJupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>${findbugs.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
    </dependencies>


    <modules>
        <module>rmatch</module>
        <module>rmatch-tester</module>
        <module>benchmarks/jmh</module>
    </modules>
    <scm>
        <connection>scm:git:git@github.com:la3lma/rmatch.git</connection>
        <url>scm:git:git@github.com:la3lma/rmatch.git</url>
        <developerConnection>scm:git:git@github.com:la3lma/rmatch.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.46.1</version>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>4.9.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${mavenCompilerPlugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-verbose</arg>
                            <arg>-Xlint:all,-options,-path</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${mavenCheckstylePlugin.version}</version>
                    <configuration>
                        <configLocation>checkstyle-unused-imports.xml</configLocation>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <failOnViolation>true</failOnViolation>
                        <violationSeverity>error</violationSeverity>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <configuration>
                    <java>
                        <googleJavaFormat/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals><goal>apply</goal><goal>check</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <configuration>
                    <failOnError>false</failOnError>
                    <!-- optional: only flag HIGH priority, ignore Medium/Low -->
                    <threshold>High</threshold>
                </configuration>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals><goal>check</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>
